# moto-stats

./: Offer.py  analize_price.py  auto_ru.csv  auto_ru_bmw.csv  auto_ru_fetch.py  auto_ru_harleys.csv  auto_ru_honda.csv  auto_ru_triumph.csv  auto_ru_triumth.csv  auto_ru_yamaha.csv  fetch_from_autoru.py  pyproject.toml  save_offers_to_csv.py
