[tool.poetry]
name = "moto-stats"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Klimasheuski <gladiator1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.2.3"
pandas = "^1.1.4"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
